fix wrong github links

--- a/index.html
+++ b/index.html
@@ -233,15 +233,6 @@
 <aside class="clearfix">
 
   
-<div class="github-card">
-<p class="asidetitle">Github 名片</p>
-<div class="github-card" data-github="https://github.com/LukeWen" data-theme="medium"></div>
-<script type="text/javascript" src="//cdn.jsdelivr.net/github-cards/latest/widget.js" ></script>
-</div>
-
-
-
-  
 <div class="categorieslist">
 	<p class="asidetitle">分类</p>
 		<ul>
@@ -310,7 +301,7 @@
 	<div class="social-font" class="clearfix">
 		
 		
-		<a href="https://github.com/https://github.com/LukeWen" target="_blank" class="icon-github" title="github"></a>
+		<a href="https://github.com/LukeWen" target="_blank" class="icon-github" title="github"></a>
 		
 		
 		
